style.css
body{
    font-family: 'Roboto', sans-serif;
    font-size: 0;
}

h1{
    text-align: center;
    font-size: 2rem;
    margin-bottom: 0;
}
h2{
    font-size: 1rem;
    text-align: center;
    border: 1px solid;
    border-radius: 6px;
    display: inline-block;
    padding: 0 5%;
    left: 50%;
    position: relative;
    transform: translateX(-50%);
}
h3{
    font-size: 1rem;
    text-align: right;
    padding-right: 5%;
}

#gutter{
    margin: 0 5%;
}

#input{
    background-color: #4c4c4c;
    width: 66%;
    font-size: 9vh;
    height: 10vh;
    text-align: right;
    box-sizing: border-box;
    padding-right: 1%;
    color: white;
}

#advanceFeatures{
    background-color: #4c4c4c;
    vertical-align: top;
    display: inline-block;
    width: 33%;
    height: 40vw;
    position: relative;
    left: 0px;

    transition: left 0.5s linear;
}

#calculatorBody{
    display: inline-block;
    width: 33%;
    height: 40vw;
    margin: auto;
    background-color: #4c4c4c;
    color: black;

}

#inputDisplay{
    width: 34%;
    height: 40vw;
    display: inline-block;
    vertical-align: top;
    background-color: #dadada;
    overflow: hidden;
    position: relative;
    left: 0px;

    transition: left 0.5s linear;
}

.row{
    width: 100%;
    height: 20%;
}

.button{
    font-size: 5vw;
    /* text-align: center; */
    width: 98%;
    height: 98%;
    position: relative;
    top: 1%;
    left: 1%;
    display: flex;
    justify-content: center;
    align-items: center;

}

.parenthesis, .clear, .clearEntry, .operators, .numbers, .equal, .extended{
    width: 25%;
    height: 100%;
    display: inline-block;
    vertical-align: top;
}

.extended .button {
    background-color: #f5923d;
    color: white;
    font-size: 3vw;
}

.operators .button {
    background-color: #f5923d;
    color: white;
}

.numbers .button, .equal .button{
    background-color: #dee0dd;
}

.clear .button, .clearEntry .button, .parenthesis .button{
    background-color: #d6d6d6;
}

.button:hover{
    color: orangered;
}

/* smoother transition */
@media screen and (max-width: 1150px){
    #advanceFeatures{
        left: -150vw;
        position: absolute;
    }
}

@media screen and (max-width: 992px) {
    #input, #calculatorBody, #inputDisplay{
        width: 50%;
    }

}

/* smoother transition */
@media screen and (max-width: 650px){
    #inputDisplay{
        left: 150vw;
        position: absolute;    
    } 
}

@media screen and (max-width: 600px) {

    #gutter{
        margin: 0 20%;
    }

    #input, #calculatorBody{
        width: 100%;
    }
    
    #input{
        height: 10vh;
    }

    #calculatorBody{
        height: 40vh;
    }

    .button{
        font-size: 10vw;
    }

}

